[package]
name = "apod"
version = "1.0.1"
edition = "2021"

[dependencies]
tao = "0.24.0"
tray-icon = "0.11.1"
anyhow = "1"
chrono = "0.4.31"
reqwest = { version = "0.11", features = ["blocking", "json"] }
wallpaper = { version = "3", features = ["from_url"] }
image = { version = "0.24.7", default-features = false, features = ["ico", "jpeg"]}
fastrand = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows ={ version = "0.51", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Storage", "System_UserProfile", "Foundation"]}
dirs = "5.0.1"

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
opt-level = "z"

[package.metadata.winres]
OriginalFilename = "apod.exe"
ProductName = "Astronomy Picture of the Day"
ProductVersion = "1.0.1"